# liturgical-calendar

./: .gitignore  Cargo.toml  README.md  cmd_cargo.md
.github/workflows/: ci.yml
data/: ascensio_domini.yaml  dominica_resurrectionis.yaml  in_assumptione_b_m_v.yaml  ioseph_sponsi_b_m_v.yaml  omnium_sanctorum.yaml  sanctissimae_trinitatis.yaml
data/draft/aout/: augustini.yaml  bartholomaei.yaml  bernardi.yaml  clarae.yaml  in_passione_ioannis_baptistae.yaml  in_transfiguratione_domini.yaml  ioannae_franciscae_de_chantal.yaml  iosephi_de_calasanz.yaml  maximiliani_mariae_kolbe.yaml  monicae.yaml  pii_x.yaml  rosae_de_lima.yaml  stephani_hungariae.yaml  xysti_ii_et_sociorum.yaml
data/draft/avril/: fidelis_de_sigmaringen.yaml  georgii.yaml  ioannis_baptistae_de_la_salle.yaml  ludovici_mariae_grignion_de_montfort.yaml  marci.yaml  martini_i.yaml  stanislai.yaml  vincentii_ferrer.yaml
data/draft/decembre/: beatae_mariae_virginis_de_guadalupe.yaml  francisci_xavier.yaml  ioannis.yaml  ioannis_didaci_cuauhtlatoatzin.yaml  ioannis_kanty.yaml  luciae.yaml  silvestri_i.yaml  thomae_becket.yaml
data/draft/fevrier/: ansgarii.yaml  cathedra_petri_apostoli.yaml  in_praesentatione_domini.yaml  polycarpi.yaml  scholasticae.yaml
data/draft/janvier/: angelae_merici.yaml  fabiani.yaml  hilarii.yaml  timothei_et_titi.yaml  vincentii.yaml
data/draft/juillet/: apollinaris.yaml  augustini_zhao_rong_et_sociorum.yaml  birgittae.yaml  bonaventurae.yaml  henrici.yaml  iacobi.yaml  ignatii_de_loyola.yaml  ioachim_et_annae.yaml  mariae_magdalenae.yaml  marthae_mariae_et_lazari.yaml  petri_chrysologi.yaml  sarbelii_makhluf.yaml
data/draft/juin/: aloisii_gonzaga.yaml  antonii_de_padua.yaml  caroli_lwanga_et_sociorum.yaml  marcellini_et_petri.yaml  protomartyrum_sanctae_romanae_ecclesiae.yaml
data/draft/mai/: beatae_mariae_virginis_de_fatima.yaml  matthiae.yaml  pancratii.yaml  philippi_neri.yaml
data/draft/mars/: casimiri.yaml  iosephi_sponsi_beatae_mariae_virginis.yaml
data/draft/novembre/: andreae_dung_lac_et_sociorum.yaml  caeciliae.yaml  caroli_borromeo.yaml  catharianae_alexandrinae.yaml  columbani.yaml  gertrudis.yaml  in_praesentatione_beatae_mariae_virginis.yaml  omnium_sanctorum.yaml
data/draft/octobre/: antonii_mariae_claret.yaml  callisti_i.yaml  dionysii_et_sociorum.yaml  francisci_assisiensis.yaml  ignatii_antiocheni.yaml  ioannis_de_capistrano.yaml  mariae_a_rosario.yaml  pauli_a_cruce.yaml  simonis_et_iudae.yaml  teresiae_a_iesu.yaml  teresiae_a_iesu_infante.yaml
data/draft/septembre/: cosmae_et_damiani.yaml  gregorii_magni.yaml  in_exaltatione_sanctae_crucis.yaml  in_nativitate_beatae_mariae_virginis.yaml  ioannis_chrysostomi.yaml  matthaei.yaml  michaelis_gabrielis_raphaelis.yaml  roberti_bellarmino.yaml  sanctissimi_nominis_mariae.yaml  teresiae_de_calcutta.yaml  venceslai.yaml  vincentii_de_paul.yaml
data/reference/: annuntiatio_domini.yaml  corpus_christi.yaml  dominica_pentecostes.yaml  epiphania_domini.yaml  in_conceptione_immaculata_b_m_v.yaml  in_nativitate_domini.yaml  nativitas_ioannis_baptistae.yaml  sacratissimi_cordis_iesu.yaml
data/universale/temporale/: dominica_ii_paschae.yaml  dominica_ii_quadragesimae.yaml  (+15 more)
docs/: Calendarium-Romanum-Generale-list.md  architecture-document-liturgical-compilation-pipeline-(AOT).md  binary-validation-and-integrity-strategy.md  cmd-cargo.md  liturgical-scheme.md  roadmap.md  specification.md
docs/adr/: ADR-Separation-of-Structure-Projection-and-i18n-Architecture-(LITS-System).md  ADR-pivot-v1-v2.md  adr-001-doy-resolution-season-independence.md  adr-002-transfers-structural-prohibition.md  adr-003-ordinal-field-separation.md  adr-004-slug-neutrality.md  adr-004.md  adr-005.md  adr-006.md  adr-007-slug-neutrality.md  adr-010-Boundary-Normalization.md  adr-separation-of-structure-projection-and-i18n-Architecture-(LITS-System).md
docs/jalon2/: roadmap.md
docs/notes/: Epiphany-failed-YAML-contract+++.md  note-arch-001-corpus-temporal-scope.md  note-ops-001-feast-registry-lock-rename-risk.md
docs/post-mortem/: roadmap-v1.0.md
documentation/: liturgical-scheme.md  roadmap.md  specification.md
documentation/ADR/: architecture-decision-record.md
documentation/jalon1/: ADR-Encoding-of-operational-liturgical-phases.md  roadmap.md  specification.md
documentation/post-mortem/: full-YAML.md  memoire-pivot-v1-v2.md  specification-v1.0.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: read_entry.rs  read_secondary.rs  validate_header.rs
liturgical-calendar-core/: Cargo.toml  build.rs  cbindgen.toml
liturgical-calendar-core/src/: entry.rs  ffi.rs  header.rs  lib.rs  lits_provider.rs  types.rs
liturgical-calendar-forge/: Cargo.toml
liturgical-calendar-forge/src/: canonicalization.rs  error.rs  i18n.rs  lib.rs  lits_writer.rs  materialization.rs  packing.rs  parsing.rs  registry.rs  resolution.rs
liturgical-calendar-forge/tests/: conformity.rs  conformity_2025.rs  full_range.rs
(+407 files in other folders)
