[package]
name = "liturgical-calendar-core"
version = "2.0.1"
edition = "2021"
# INV-W9 : offset_of! stabilisé en 1.77
rust-version = "1.77"

# Production : "lib" (rlib) uniquement.
# La staticlib C est produite par invocation explicite :
#   cargo rustc -p liturgical-calendar-core --release -- --crate-type staticlib
# (voir §0.3 spec — double crate-type rend cargo test inopérant en no_std)
[lib]
crate-type = ["lib"]

[dependencies]
# Seule dépendance autorisée — INV-W1.
# default-features = false : désactive std + alloc transitif.
sha2 = { version = "0.10", default-features = false }

[build-dependencies]
# cbindgen est une build-dependency optionnelle, hors CI standard (voir tâche 1.5).
cbindgen = { version = "0.27", optional = true }

[features]
# INV : feature déclarée explicitement pour éviter unexpected_cfg sous -D warnings (Cargo 1.75+).
gen-headers = ["cbindgen"]
# Par défaut, on reste pur (no_std). 
# On ne met rien dans "default" pour forcer la pureté.
std = []
