[package]
name = "liturgical-calendar-forge"
version = "2.0.1"
edition = "2021"

[dependencies]
# INV-W4 : la Forge peut dépendre de l'Engine (lecture/validation). Jamais l'inverse.
liturgical-calendar-core = { path = "../liturgical-calendar-core" }

# Dépendances Forge (std) — non restrictives
sha2 = { version = "0.10", default-features = false }
